k8s/db-warehouse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-warehouse
  labels:
    app: db-warehouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-warehouse
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db-warehouse
    spec:
      containers:
        - name: db-warehouse
          image: postgres:15.2
          ports:
            - containerPort: 5432
              name: db-warehouse
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-warehouse
      volumes:
        - name: db-warehouse
          persistentVolumeClaim:
            claimName: db-warehouse
