k8s/warehouse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: warehouse
  name: warehouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warehouse
  template:
    metadata:
      labels:
        app: warehouse
    spec:
      containers:
        - name: warehouse
          image: warehouse:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 7001
