k8s/db-keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-keycloak
spec:
  type: LoadBalancer
  selector:
    app: db-keycloak
  ports:
    - port: 7432
      targetPort: 5432
