k8s/db-warehouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-warehouse
spec:
  type: LoadBalancer
  selector:
    app: db-warehouse
  ports:
    - port: 7433
      targetPort: 5432
