k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse
spec:
  selector:
    app: warehouse
  ports:
    - protocol: "TCP"
      port: 7001 # The port that the service is running on in the cluster
      targetPort: 7001 # The port exposed by the service
  type: LoadBalancer # type of the service. LoadBalancer indicates that our service will be external.
