k8s/warehouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse
spec:
  type: LoadBalancer
  selector:
    app: warehouse
  ports:
      - protocol: "TCP"
        port: 7002
        targetPort: 7002
#        nodePort: 30002
