k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: integ.dynv6.net
      http:
        paths:
          - path: /keycloak
            pathType: Exact
            backend:
              service:
                name: keycloak
                port:
                  number: 7001
